--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             <div class="col-sm-4">.col-sm-4</div>
             <div class="col-sm-8">.col-sm-8</div>
           </div>
-
+          <p class="text-muted">This text is muted.</p>
     
 </body>
