--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         <p>this is some text</p>
     </div>
     <div class="row">
-        <div class="col">Three equal rows</div>
-        <div class="col">Three equal rows</div>
-        <div class="col">Three equal rows</div>
+        <div class="col bg-success">Three equal rows</div>
+        <div class="col bg-primary">Three equal rows</div>
+        <div class="col bg-info">Three equal rows</div>
     </div>
         <h1>Three Responsive Columns</h1>
         <div class="row">
-            <div class="col-sm-4">.col-sm-3</div>
-            <div class="col-sm-4">.col-sm-3</div>
-            <div class="col-sm-4">.col-sm-3</div>
+            <div class="col-sm-4 bg-success">.col-sm-3</div>
+            <div class="col-sm-4 bg-primary">.col-sm-3</div>
+            <div class="col-sm-4 bg-info">.col-sm-3</div>
         </div>
         <h1>Two Unequal Responsive Columns</h1>
         <div class="row">
-            <div class="col-sm-4">.col-sm-4</div>
-            <div class="col-sm-8">.col-sm-8</div>
+            <div class="col-sm-4 bg-info">.col-sm-4</div>
+            <div class="col-sm-8 bg-primary " >.col-sm-8</div>
           </div>
           <p class="text-muted">This text is muted.</p>
     
